examples/test/testpolicy6016.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6016
  namespace: namespace362
spec:
  podSelector:
    matchLabels:
      key31: value7
      key42: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value33
          key11: value37
          key5: value8
      podSelector:
        matchLabels:
          key16: value4
          key18: value9
          key22: value2
